feat: overhaul into the 1% HFT Matrix — 4-tier systems-engineering platform
Replace the 22-day beginner course with a four-tier advanced curriculum,
each tier carrying graded stdin->stdout problems (visible + hidden tests),
a microsecond time + peak-memory profiler, and an empirical Big-O evaluator.

- New tier-matrix router + 1% dark-terminal assessment mode (onepct).
- Execution through Vercel: Pyodide in-browser for Python Tiers 1-3;
  same-origin /api serverless functions proxying to Judge0 for native Java
  and Python Tier 4 (GIL escape / native ext). Set JUDGE0_URL in Vercel env.
- Remove obsolete day/module/exam content and wiring.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>